refactor: Fix trailing newlines, update docs and plan
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>